# forsage_v2

./: .gitignore  package-lock.json  package.json
anchor/: Anchor.toml  package-lock.json  tsconfig.json
anchor/programs/forsage_v2/: Cargo.toml
anchor/programs/forsage_v2/src/: lib.rs  lib2.rs
anchor/scripts/: initialize.ts
web/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/src/: forsage_v2.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: WalletProvider.tsx
